# aoc_2020

./: .gitignore  Cargo.toml  README.md  build.rs
src/: error.rs  lib.rs  main.rs  util.rs  vec2.rs  vec3.rs
src/day/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  mod.rs
src/input/: mod.rs
tests/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs
