[package]
name = "aoc_2020"
version = "0.1.3"
authors = ["Kenzi Jeanis <isavegas2006@gmail.com>"]
edition = "2018"
default-run = "aoc_2020"

[dependencies]
maplit = "1.0.2"
lazy_static = "1.4.0"
automod = "1.0.2"
bitflags = "1.2.1"
aoc_core = { git = "https://github.com/isavegas/aoc_core", tag = "v0.1.9" }
#aoc_core = { path = "../core" }

[build-dependencies]
aoc_core = { git = "https://github.com/isavegas/aoc_core", tag = "v0.1.9" }
#aoc_core = { path = "../core" }
