[package]
name = "aoc_2020"
version = "0.1.3"
authors = ["Kenzi Jeanis <isavegas2006@gmail.com>"]
edition = "2018"
default-run = "aoc_2020"

[dependencies]
maplit = "1.0.2"
lazy_static = "1.4.0"
automod = "1.0.2"
bitflags = "1.3.2"
aoc_core = { path = "./aoc_core" }

[build-dependencies]
aoc_core = { path = "./aoc_core" }

